# pyplayht

./: .gitignore  README.md  pyproject.toml
src/pyplayht/: __init__.py  __main__.py  api_pb2.py  api_pb2.pyi  api_pb2_grpc.py  auth.py  logging_config.py  tts.py
src/pyplayht/api/: __init__.py  api.http  http-client.env.json  playht.yml  standard_and_premium.py  v2_async_tts.py  v2_timestamps.py  v2_voice_cloning.py
